--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "discord-ticket-bot",
+  "name": "discord-bot",
   "private": true,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node index.js"
+    "start": "node src/index.js",
+    "dev": "node src/index.js"
   },
   "dependencies": {
-    "@discordjs/rest": "^2.2.0",
-    "date-fns": "^2.30.0",
-    "date-fns-tz": "^2.0.0",
-    "discord-html-transcripts": "^3.2.0",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "puppeteer": "^22.8.2",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "dotenv": "^16.4.1",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.0.0"
   }
 }
